Added a url preview for each card on the portfolio page

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-tiny-link": "^3.6.1",
     "react-tooltip": "^4.2.15",
     "web-vitals": "^0.2.4"
   },
